Fix animal sniffer